fixed the blub in mobile again , and found some colors for dark mode (avoid using pure black)

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,7 +2,7 @@
 
 .dark-mode{
     color: white;
-    background-color: black;
+    background-color: #121212;
     height: 100vh;
     width: 100vw;
 }
