--- a/src/app/shared/components/navbar/navbar.component.css
+++ b/src/app/shared/components/navbar/navbar.component.css
@@ -15,30 +15,32 @@
     padding: 1rem 0rem;
     font-size: 20px;
     font-family: "Space Mono", monospace;
-    background-color: black;
     border-radius: 35%;
 }
 
 @media (max-width: 768px) {
     .container{
-        top: 1rem;
+        background-color: #181818;
+        top: 2rem;
         position: fixed;
         width: 20rem;
         z-index: 6;
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
         align-items: center;
         left: 50%;
         translate: -50%;
         backdrop-filter: blur(250px);
+        border-radius: 7px;
+        padding: 0.4rem 0rem;
     }
 
     .element{
-        padding: 1rem 0rem;
+        color: white;
+        padding: 0.5rem 0.5rem;
         font-size: 1rem;
         font-family: "Space Mono", monospace;
-        background-color: black;
-        border-radius: 35%;
+        border-radius: 7px;
     }
 }
 
